# fastapitodolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/api/v1/: auth.py  tasks.py  users.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0e60fdbaa6b5_revokedtokenorm.py  45cdfcd765c6_fixed_tasks_description.py  f4e48071e307_init_commit.py
app/db/models/: auth.py  tasks.py  users.py
app/schemas/: auth.py  tasks.py  users.py
app/services/: auth.py  tasks.py  users.py
app/utils/: auth.py  enums.py  exceptions.py  pagination.py  schemas.py
tests/test_api_auth/: test_issue_refresh_access_tokens.py  test_logout_user.py  test_refresh_access_token.py
tests/test_api_tasks/: test_create_task.py  test_destroy_task.py  test_get_tasks_filtered_by_status.py  test_list_all_users_tasks.py  test_mark_task_as_completed.py  test_partial_update_task.py  test_retrieve_task.py
tests/test_api_users/: test_create_and_save_user.py
tests/utils/: auth.py  models.py
